--- a/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
+++ b/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
@@ -67,7 +67,7 @@
 
 \title{Guide 1: Obtaining State Weather Station Data}
 \author{Marc Los Huertos}
-\date{\today~(ver. 0.96)}
+\date{\today~(ver. 0.97)}
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
 \maketitle
@@ -215,7 +215,7 @@ This will download the data from the NOAA website and read it into R then writte
 
 \end{description}
 
-\noindent {\Large\textcolor{LightRubineRed}{You're are done with this guide, go to Guide 2!}}
+\noindent {\Large\textcolor{ForestGreen}{You're are done with this guide, go to Guide 2!}}
 
 \section{Explaining the Process and Code}
 
@@ -243,79 +243,6 @@ When you knit, R starts a new environment and runs the code in the chunks. But t
 
 I have created an R Markdown file for you to use. It is called MarcsTemplate.Rmd. As a template, you can use and change the code as you go. 
 
-\section{Function Descriptions}
-
-\subsection{readInventory.fun}\label{subsec:readInventory}
-
-Here's the function:
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{verbatim}
-## function (filename, my.state) 
-## {
-##     inventory.active.oldest <- read.csv(filename)
-##     my.inventory = subset(inventory.active.oldest, STATE == my.state)
-##     return(my.inventory)
-## }
-\end{verbatim}
-\end{kframe}
-\end{knitrout}
-
-\subsection{downloadStations.fun}\label{subsec:downloadStations}
-
-Here's the function:
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{verbatim}
-## function (datafolder, my.inventory = my.inventory) 
-## {
-##     for (i in 1:nrow(my.inventory)) {
-##         url = paste0("https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/", 
-##             my.inventory$ID[i], ".csv.gz")
-##         download.file(url, paste0(datafolder, my.inventory$ID[i], 
-##             ".csv.gz"), quiet = FALSE, mode = "w", cacheOK = TRUE)
-##         print(paste("Index (Loop) ", i, " Completed."))
-##         print("Think about something you are grateful for today!")
-##     }
-##     StationList.df <- lapply(list.files(datafolder, full.names = TRUE, 
-##         pattern = "\\.gz$"), read.csv, header = FALSE)
-##     colnames <- c("ID", "DATE", "ELEMENT", "VALUE", "M-FLAG", 
-##         "Q-FLAG", "S-FLAG", "OBS-TIME")
-##     StationList.df <- lapply(StationList.df, setNames, colnames)
-##     for (i in seq_along(StationList.df)) {
-##         filename = paste0(datafolder, my.inventory$ID[i], ".csv")
-##         write.csv(StationList.df[[i]], filename, row.names = FALSE)
-##     }
-##     write.csv(my.inventory, paste0(datafolder, "my.inventory.csv"), 
-##         row.names = FALSE)
-## }
-## <bytecode: 0x395dc08>
-\end{verbatim}
-\end{kframe}
-\end{knitrout}
-
-\section{Trouble Shooting and Workarounds}
-
-I will be getting all the guides working before working on this! But if there are errors with the custom function, this is where workarounds will be described! Please Slack me and mentors if you have any problems!
-
-%\subsubsection{Identify List of State IDs (FIPS)}
-
-%Using the rNOAA library in R, we can query NOAA's database to identify station codes (FIPS) by state. With the states and some territories, there are 55 FIPS for US weather stations. Althogh these include the District of Columbia, they do not include US Territories, sich as Guam, Puerto Rico, Marshall Islands, etc. We'll have to use a different search code for these.
-
-%rNOAA has a simple function to list for each of the states and the weather stations in each. I use ncdc\_locs() functions to select each state and ncdc\_station() to obtain the station ids with the longest records. 
-
-%The function queries the NOAA website and retrieves state codes, ``FIPS:XX''. Each state has a number of weather stations,\footnote{Project Idea: It would be nice to make a map of how concentrated the stations spatially.} some with a long record, some with a short record, and some with numerous interruptions. Our goal is to select a long record with few missing data. 
-
-%\subsubsection{Selection Stations}
-
-%With the state ids, we can evaluate the metadata for all the weather stations, which will work to get the longest records, using \texttt{ncdc\_stations()}. 
-
-%First, we subset the data for stations that actively collecting data. Then we'll sort to the active stations to find the one with the longest records. We will use these stations for our analysis. 
-
-%There were some records that didn't have robust TMAX/TMIN records, so there are some states that I had to manually select an alternative stations. 
-
 \subsection{Defining Path \& Read Data}
 
 First, we install some packages and read in the data. I suggest you create a folder for the project (I created one called ``04\_Regional\_Climate\_Trends") and then used the function here() to get the working directory and read the csv into R. This might be easier than the file.choose() option, but you can use that if you prefer.
@@ -338,108 +265,144 @@ Then paste the result in the Rmd file to track the results to define the file na
 
 \hlcom{# OR what I use! }
 \hlkwd{library}\hlstd{(here)}
-\hlstd{filename} \hlkwb{=} \hlkwd{read.csv}\hlstd{(}
-  \hlkwd{here}\hlstd{(}\hlstr{"04_Regional_Climate_Trends"}\hlstd{,} \hlstr{"Data"}\hlstd{,} \hlstr{"SP24"}\hlstd{,} \hlstr{"stations.active.oldest.csv"}\hlstd{))}
+\hlstd{filename} \hlkwb{=} \hlkwd{here}\hlstd{(}\hlstr{"04_Regional_Climate_Trends"}\hlstd{,} \hlstr{"Data"}\hlstd{,} \hlstr{"SP24"}\hlstd{,} \hlstr{"stations.active.oldest.csv"}\hlstd{)}
 \end{alltt}
 \end{kframe}
 \end{knitrout}
 
-\subsection{NA.csv as a duplicate?}
-
-I am not sure why, but in the downloadStations.fun(), the file is saved as NA.csv. I have no idea why. If you find this, let me know, I'd like to figure out if their is a bug in the code creating this csv.
 
 %suggest you change the name of the file to something more descriptive.
 
-\subsection{Download gz files with folder concantentated names}
-
-I don't know what causes this problem yet. But 5 students had this issue on Wedesday, but no one on Tuesday. That less than half the students had this issue is perplexing and I am continuing to work on this. More soon, I hope. 
-
-\section{Text that needs to be editted}
-
 \subsection{Selecting Weather Records by State}
 
-There are numerous ways to analyze temperature records, where stations can be analyzed individually or records could be sampled and analyzed in spatially in grids. Each of these are valid approaches depending on the question to be addressed. 
-
-Here are the questions we will address: 
-
-\begin{itemize}
-  \item What stations have the longest meterological records in the USA?
-  \item Can we determine the reliability of these stations?
-  \item Finally, is there a temperature trend?
-\end{itemize}
-
-\subsection{Map US Weather Stations}
+\subsubsection{Map US Weather Stations}
 
 Here's a map of the weather stations in the dataset. Pretty lame map!  We'll make a better one later.\footnote{Evelyn/Brody: This is a good change to see how to use R for map making! First we need to transform that data.}
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
+\hlstd{stations.active.oldest} \hlkwb{=} \hlkwd{read.csv}\hlstd{(}\hlkwd{paste0}\hlstd{(}\hlkwd{here}\hlstd{(),} \hlstr{"/04_Regional_Climate_Trends/"}\hlstd{,} \hlstr{"Data/"}\hlstd{,} \hlstr{"SP24/"}\hlstd{,} \hlstr{"stations.active.oldest.csv"}\hlstd{))}
 \hlkwd{plot}\hlstd{(stations.active.oldest}\hlopt{$}\hlstd{LONGITUDE,}
      \hlstd{stations.active.oldest}\hlopt{$}\hlstd{LATITUDE,}
      \hlkwc{xlab} \hlstd{=} \hlstr{"Longitude"}\hlstd{,}\hlkwc{ylab} \hlstd{=} \hlstr{"Latitude"}\hlstd{,}
      \hlkwc{pch}\hlstd{=}\hlnum{20}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{0.3}\hlstd{,} \hlkwc{col}\hlstd{=}\hlstr{'gray60'}\hlstd{,} \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{,}
      \hlkwc{main} \hlstd{=} \hlstr{"US Weather Stations"}\hlstd{)}
 \end{alltt}
-
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in plot(stations.active.oldest\$LONGITUDE, stations.active.oldest\$LATITUDE, : object 'stations.active.oldest' not found}}\end{kframe}
-\end{knitrout}
-\subsection{Select and Evaluate State Data}
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlstd{stations.unique} \hlkwb{=}
-  \hlkwd{unique}\hlstd{(stations.active.oldest[,}\hlkwd{c}\hlstd{(}\hlstr{"STATE"}\hlstd{,} \hlstr{"STATE_NAME"}\hlstd{)])}
-\end{alltt}
-
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in unique(stations.active.oldest[, c("{}STATE"{}, "{}STATE\_NAME"{})]): object 'stations.active.oldest' not found}}\begin{alltt}
-\hlstd{xtab} \hlkwb{=} \hlkwd{xtable}\hlstd{(stations.unique)}
-\end{alltt}
-
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in xtable(stations.unique): could not find function "{}xtable"{}}}\end{kframe}
-\end{knitrout}
-
-The each of you will select a state -- see the Google Sheet sign up so we have a diverse set of states.
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlstd{my.state} \hlkwb{=} \hlstr{"CA"} \hlcom{# change the "CA" to your state}
-\end{alltt}
 \end{kframe}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-4-1} 
 \end{knitrout}
 
-\section{Download Data from NOAA}
+There are numerous ways to analyze temperature records, where stations can be analyzed individually or records could be sampled and analyzed in spatially in grids. Each of these are valid approaches depending on the question to be addressed. 
 
-\subsection{Subset Station Data by State}
+Here are the questions we will address: 
+
+\begin{itemize}
+  \item What stations have the longest meteorological records in the USA?
+  \item Can we determine the reliability of these stations?
+  \item Finally, is there a temperature trend?
+\end{itemize}
+
+\subsection{Subset Station Inventory by State}
 
 This uses the stations.active.oldest file to download the data from the NOAA website based on the state you have choose.
 
 The URL for the data is: \url{https://www.ncdc.noaa.gov/cdo-web/datasets/GHCND/stations/GHCND:USW00023230/detail}.
 
+\section{Function Descriptions}
+
+
+
+\subsection{readInventory.fun}\label{subsec:readInventory}
+
+Here's the function:
+
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlstd{my.stations} \hlkwb{=} \hlkwd{subset}\hlstd{(stations.active.oldest, STATE} \hlopt{==} \hlstd{my.state)}
-\end{alltt}
-
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in subset(stations.active.oldest, STATE == my.state): object 'stations.active.oldest' not found}}\begin{alltt}
-\hlcom{# Download Updated Station Data}
-\hlstd{i}\hlkwb{=}\hlnum{1}
-\hlstd{here}\hlopt{::}\hlkwd{here}\hlstd{(}\hlstr{"04_Regional_Climate_Trends"}\hlstd{, my.stations}\hlopt{$}\hlstd{ID[i])}
-\end{alltt}
-
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in path("{}/home/mwl04747/RTricks"{}, ...): object 'my.stations' not found}}\end{kframe}
+\begin{verbatim}
+## function (filename, my.state) 
+## {
+##     inventory.active.oldest <- read.csv(filename)
+##     my.inventory = subset(inventory.active.oldest, STATE == my.state)
+##     return(my.inventory)
+## }
+\end{verbatim}
+\end{kframe}
 \end{knitrout}
 
+\subsection{downloadStations.fun}\label{subsec:downloadStations}\section{Download Data from NOAA}
 
-% bibilography section here-------------------------------------------
+
+
+
+
+Here's the function:
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+## function (datafolder, my.inventory = my.inventory) 
+## {
+##     colnames <- c("ID", "DATE", "ELEMENT", "VALUE", "M-FLAG", 
+##         "Q-FLAG", "S-FLAG", "OBS-TIME")
+##     for (i in 1:nrow(my.inventory)) {
+##         url = paste0("https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/", 
+##             my.inventory$ID[i], ".csv.gz")
+##         download.file(url, paste0(datafolder, my.inventory$ID[i], 
+##             ".csv.gz"), quiet = FALSE, mode = "w", cacheOK = TRUE)
+##         station.temp <- read.csv(paste0(datafolder, my.inventory$ID[i], 
+##             ".csv.gz"), header = FALSE)
+##         names(station.temp) <- colnames
+##         filename = paste0(datafolder, my.inventory$ID[i], ".csv")
+##         write.csv(station.temp, filename, row.names = FALSE)
+##         print(paste("Index (Loop) ", i, " Completed."))
+##         print("NOAA site can stall -- if the loop errors out, try again.")
+##     }
+##     print("Think about something you are grateful for today!")
+## }
+## <bytecode: 0x3b0d298>
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
+\section{Trouble Shooting and Workarounds}
+
+I will be getting all the guides working before working on this! But if there are errors with the custom function, this is where workarounds will be described! Please Slack me and mentors if you have any problems!
+
+\subsection{NA.csv as a duplicate?}
+
+I am not sure why, but in the downloadStations.fun(), the file is saved as NA.csv. I have no idea why. If you find this, let me know, I'd like to figure out if their is a bug in the code creating this csv.
+
+\subsection{Download gz files with folder concantentated names}
+
+Five students had this issue on Wednesday, but no one on Tuesday. That less than half the students had this issue is perplexing and I figured out that some students were using old functions, so I updated the functions and changed the Guide fuction file to reflect this change. 
+
+
+
+
+\section{rNOAA}
+
+The rNOAA package has been deprecated, so all the 2000-2022 code is no longer working. I have commented out the text -- but should I need to re-run the code, I have some of the description in the Rmd file. 
+
+%\subsubsection{Identify List of State IDs (FIPS)}
+
+%Using the rNOAA library in R, we can query NOAA's database to identify station codes (FIPS) by state. With the states and some territories, there are 55 FIPS for US weather stations. Althogh these include the District of Columbia, they do not include US Territories, sich as Guam, Puerto Rico, Marshall Islands, etc. We'll have to use a different search code for these.
+
+%rNOAA has a simple function to list for each of the states and the weather stations in each. I use ncdc\_locs() functions to select each state and ncdc\_station() to obtain the station ids with the longest records. 
+
+%The function queries the NOAA website and retrieves state codes, ``FIPS:XX''. Each state has a number of weather stations,\footnote{Project Idea: It would be nice to make a map of how concentrated the stations spatially.} some with a long record, some with a short record, and some with numerous interruptions. Our goal is to select a long record with few missing data. 
+
+%\subsubsection{Selection Stations}
+
+%With the state ids, we can evaluate the metadata for all the weather stations, which will work to get the longest records, using \texttt{ncdc\_stations()}. 
+
+%First, we subset the data for stations that actively collecting data. Then we'll sort to the active stations to find the one with the longest records. We will use these stations for our analysis. 
+
+%There were some records that didn't have robust TMAX/TMIN records, so there are some states that I had to manually select an alternative stations. 
+
+
+
+% bibiliography section here-------------------------------------------
 %\clearpage
 
 \bibliographystyle{apalike}
