--- a/04_Regional_Climate_Trends/Guides/MarcsTemplate.Rmd
+++ b/04_Regional_Climate_Trends/Guides/MarcsTemplate.Rmd
@@ -91,9 +91,7 @@ USC00042294.anomalies <- MonthlyAnomalies.fun(USC00042294.monthly, USC00042294.n
 
 ## Chunk 1 Source Guide3fuctions
 
-```{r, chunk3_1}
-
-You might see a note about file note found, this is for Marc, you can ignore.
+You might see a note about file not found, this is for Marc, you can ignore.
 ```{r, chunk3_1}
 source("/home/mwl04747/RTricks/04_Regional_Climate_Trends/Guides/Guide3functions.R")
 ```
