--- a/references.bib
+++ b/references.bib
@@ -43,3 +43,60 @@
   year={1997},
   publisher={JSTOR}
 }
+
+@article{scannell2013personally,
+  title={Personally relevant climate change: The role of place attachment and local versus global message framing in engagement},
+  author={Scannell, Leila and Gifford, Robert},
+  journal={Environment and Behavior},
+  volume={45},
+  number={1},
+  pages={60--85},
+  year={2013},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{maibach2023harnessing,
+  title={Harnessing the Power of Communication and Behavior Science to Enhance Society's Response to Climate Change},
+  author={Maibach, Edward W and Uppalapati, Sri Saahitya and Orr, Margaret and Thaker, Jagadish},
+  journal={Annual Review of Earth and Planetary Sciences},
+  volume={51},
+  pages={53--77},
+  year={2023},
+  publisher={Annual Reviews}
+}
+
+@article{nieto2024communicating,
+  title={Communicating Climate Change on TikTok During the Climate Summits: From the Environmental Issues to the Politicization of Discourse},
+  author={Nieto-Sandoval, Alejandra G and Ferr{\'e}-Pavia, Carme},
+  journal={Environmental Communication},
+  pages={1--20},
+  year={2024},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{nguyen2023tiktok,
+  title={TikTok as Learning Analytics Data: Framing Climate Change and Data Practices},
+  author={Nguyen, Ha},
+  booktitle={LAK23: 13th International Learning Analytics and Knowledge Conference},
+  pages={33--43},
+  year={2023}
+}
+
+@article{makela2024climate,
+  title={Climate uncertainty, social media certainty: A story-critical approach to climate change storytelling on social media},
+  author={M{\"a}kel{\"a}, Maria},
+  journal={Frontiers of Narrative Studies},
+  volume={9},
+  number={2},
+  pages={232--253},
+  year={2024},
+  publisher={De Gruyter}
+}
+
+@article{kresin2024students,
+  title={Students' credibility criteria for evaluating scientific information: The case of climate change on social media},
+  author={Kresin, Soraya and Kremer, Kerstin and B{\"u}ssing, Alexander Georg},
+  journal={Science Education},
+  year={2024},
+  publisher={Wiley Online Library}
+}
