--- a/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
+++ b/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
@@ -142,9 +142,9 @@ I suggest you do the following to prepare:
 
 These functions are designed so you don't have to type all the code! But check to see if they work for you, because they can (apparently) break really easily. 
 
-From the Canvas page, go to the \href{https://github.com/marclos/RTricks/blob/master/04_Regional_Climate_Trends/Guides/Guide1functions.R}{Guide1functions.R} code and download the file to your computer. Then upload the file to a directory in Rstudio. I suggest you create a new directory called ``Regional\_Climate\_Trends'' and then upload the file to that directory. Please note, avoid spaces in your directory names.
+From the Canvas page, go to the \href{https://github.com/marclos/RTricks/blob/master/04_Regional_Climate_Trends/Guides/Guide1functions.R}{Guide1functions.R} code and download the file to your computer. Then upload the file to a directory in Rstudio. I suggest you create a project called ``Regional\_Climate\_Trends'' and then upload the file to that directory. Please note, avoid spaces in your directory names.
 
-Open the file in Rstudio and run the code, using the ``source'' action item near the top, right of the editor window (Figure~\ref{fig:source_code}).
+Open the file in Rstudio and run the code, using the ``source'' action item near the top, right of the editor pane (Figure~\ref{fig:source_code}).
 
 \begin{figure}[h]
 \centering
@@ -278,11 +278,12 @@ Here's a map of the weather stations in the dataset. Pretty lame map!  We'll mak
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
 \hlstd{stations.active.oldest} \hlkwb{=}
-  \hlkwd{read.csv}\hlstd{(}\hlkwd{paste0}\hlstd{(}\hlkwd{here}\hlstd{(),} \hlstr{"/04_Regional_Climate_Trends/"}\hlstd{,} \hlstr{"stations.active.oldest.csv"}\hlstd{))}
+  \hlkwd{read.csv}\hlstd{(}\hlkwd{paste0}\hlstd{(}\hlkwd{here}\hlstd{(),} \hlstr{"/04_Regional_Climate_Trends/"}\hlstd{,}
+                  \hlstr{"stations.active.oldest.csv"}\hlstd{))}
 \hlkwd{plot}\hlstd{(stations.active.oldest}\hlopt{$}\hlstd{LONGITUDE,}
      \hlstd{stations.active.oldest}\hlopt{$}\hlstd{LATITUDE,}
      \hlkwc{xlab} \hlstd{=} \hlstr{"Longitude"}\hlstd{,}\hlkwc{ylab} \hlstd{=} \hlstr{"Latitude"}\hlstd{,}
-     \hlkwc{pch}\hlstd{=}\hlnum{20}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{0.3}\hlstd{,} \hlkwc{col}\hlstd{=}\hlstr{'gray60'}\hlstd{,} \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{,}
+     \hlkwc{pch}\hlstd{=}\hlnum{20}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{0.2}\hlstd{,} \hlkwc{col}\hlstd{=}\hlstr{'gray40'}\hlstd{,} \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{,}
      \hlkwc{main} \hlstd{=} \hlstr{"US Weather Stations"}\hlstd{)}
 \end{alltt}
 \end{kframe}
@@ -303,13 +304,13 @@ Here are the questions we will address:
 
 This uses the stations.active.oldest file to download the data from the NOAA website based on the state you have choose.
 
-The URL for the data is: \url{https://www.ncdc.noaa.gov/cdo-web/datasets/GHCND/stations/GHCND:USW00023230/detail}.
+The URL for a description of the data is: \url{https://www.ncdc.noaa.gov/cdo-web/datasets/GHCND/stations/GHCND:USW00023230/detail}.
 
-\section{Function Descriptions}
-
-
+\section{Function Details}
 
 \subsection{readInventory.fun}\label{subsec:readInventory}
+
+This function...
 
 Here's the function:
 
@@ -356,7 +357,7 @@ Here's the function:
 ##     }
 ##     print("Think about something you are grateful for today!")
 ## }
-## <bytecode: 0x42bceb8>
+## <bytecode: 0x3daef98>
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -368,15 +369,13 @@ I will be getting all the guides working before working on this! But if there ar
 \subsection{NA.csv as a duplicate?}
 
 I am not sure why, but in the downloadStations.fun(), the file is saved as NA.csv. I have no idea why. If you find this, let me know, I'd like to figure out if their is a bug in the code creating this csv.
+If you find a NA.csv in your folder, please let marc or mentors know and we will try to figure out what is going on.
 
 \subsection{Download gz files with folder concantentated names}
 
 Five students had this issue on Wednesday, but no one on Tuesday. That less than half the students had this issue is perplexing and I figured out that some students were using old functions, so I updated the functions and changed the Guide fuction file to reflect this change. 
 
-
-
-
-\section{rNOAA}
+\section{rNOAA -- Unsupported and Deprecated Library}
 
 The rNOAA package has been deprecated, so all the 2000-2022 code is no longer working. I have commented out the text -- but should I need to re-run the code, I have some of the description in the Rmd file. 
 
